deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: janus
  labels:
    app: janus
spec:
  selector:
    app: janus
  ports:
    - name: http
      port: 8080
      targetPort: http
  type: ClusterIP
